# decisive-stump-travel-hack-2024

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Cargo.toml  README.md  Rocket.toml  Taskfile.dist.yaml  compose.yaml
backend-py/: .gitignore  pyproject.toml
backend/docker/: Dockerfile.backend  Dockerfile.guests  Dockerfile.worker  haproxy.cfg
backend/kube/: 01-ns.yaml  03-deploy.yaml  03-deploy.yml  04-svc.yaml  04-svc.yml  05-ingress.yaml
backend/src/: config.rs  guests.rs  lib.rs  main.rs  worker.rs
backend/src/connections/: click.rs  mod.rs  redis.rs  rsmq.rs  s3.rs  urls.rs
backend/src/enums/: images.rs  ml_worker.rs  mod.rs  rsmq.rs  worker.rs
backend/src/guest_routes/: mod.rs  search_by_photo.rs
backend/src/locks/: generic.rs  image_upload.rs  ml_analyze.rs  mod.rs  worker_gallery.rs
backend/src/models/: uploads.rs
backend/src/models/http/: images.rs  main_page.rs  ml_user.rs  mod.rs  search.rs  uploads.rs
backend/src/routes/: img.rs  mod.rs  test.rs
backend/src/routes/img/: file_ops.rs  files.rs  main_page.rs  ml.rs  ml_ops.rs  mod.rs  neighbors.rs  s3_checks.rs  search.rs
backend/src/routes/img/utils/: mod.rs  s3_checks.rs
backend/src/tasks/: compress.rs  mod.rs
backend/src/tasks/task_types/: compress_image.rs  delete_image.rs  mod.rs
backend/src/tasks/task_types/compress_image/: job.rs
backend/src/tasks/task_types/utils/: queues.rs
backend/src/tasks/utils/: mod.rs  requests.rs
backend/src/tasks/utils/files/: tmp.rs
backend/src/utils/: hash.rs  mod.rs
backend/src/utils/redis/: galleries.rs  images.rs  mod.rs
backend/src/utils/rng/: tokens.rs
backend/src/utils/rsmq/: mod.rs  presigned_urls.rs  verify.rs
backend/src/utils/s3/: images.rs
pass_admin/: README.md  pubspec.yaml
pass_admin/docker/: Dockerfile.web
pass_admin/kube/: 03-deploy.yaml  04-svc.yaml  05-ingress.yaml
pass_admin/lib/: main.dart
pass_admin/linux/: CMakeLists.txt  my_application.cc
pass_admin/test/: widget_test.dart
pass_admin/web/: index.html  manifest.json
pass_admin/windows/: CMakeLists.txt
travel_admin/: README.md  pubspec.yaml
travel_admin/lib/: main.dart
travel_admin/test/: widget_test.dart
travel_admin/web/: index.html  manifest.json
travel_frontend/: README.md  Taskfile.dist.yaml  pubspec.yaml
travel_frontend/docker/: Dockerfile.web
travel_ml/: README.md  gpu_processor.py  queue_processor.py  requirements.txt  search_processor.py
(+170 files in other folders)
