[tool.poetry]
name = "decisive-stump-travel-hack-2024-backend"
packages = [{include = "ds_backend", from="src"}]
version = "0.0.1"
description = ""
authors = ["0xb1b1 <hello@axelreitenbach.online>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskiq = "^0.11.0"
taskiq-redis = "^0.5.5"

[tool.poetry.scripts]
start = "cjsc_backend.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"